--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <header-section></header-section>
 
   <header-root></header-root>
-
+<!--<app-first></app-first>-->
 <!--  <first-section></first-section>-->
 <!--  <second-section></second-section>-->
 <!--  <third-section></third-section>-->
