--- a/src/app/headersection/headersection.component.css
+++ b/src/app/headersection/headersection.component.css
@@ -1,11 +1,12 @@
 .topbar{
    background-color: black;
    display: flex;  /* Make Flex container */
-
+position: fixed;
 }
 .navcenter{
- position: absolute;
-   left: 420px;
+   left: 400px;
+   position: fixed;
+   background-color:black;
 }
 .topbar ul{
    list-style-type: none;
@@ -37,6 +38,53 @@
   color:white;
 }
 
-.leftnav {
-  right: 250px;
+
+
+.leftsidenav{
+ text-align: left;
+}
+.example-container {
+  width: 500px;
+  height: 300px;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+.example-sidenav-content {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.example-sidenav {
+  padding: 20px;
+}
+
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.button4 {
+background-color: #e7e7e7;
+color: black;
+}
+
+.navbarright{
+text-align:right;
+}
+
+
+.rightcenter{
+   left: 1350px;
+   position: fixed;
+   background-color:black;
 }
