--- a/src/app/headersection/headersection.component.html
+++ b/src/app/headersection/headersection.component.html
@@ -1,22 +1,68 @@
 <div class="topbar">
-  <div class="leftnav">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <a href="https://api.whatsapp.com/send?phone=51955081075&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202." class="float" target="_blank">
     <i class="fa fa-whatsapp my-float"></i>
   </a>
 
   <a href="mailto:myemailaddress@gmail.com"> <img src="assets/icons/email.png"> </a>
-  </div>
+
+
   <div class="navcenter">
-        <ul>
+<!--        <ul>-->
           <!--                <li (click)="toHome()"><b><a href="#home">Start</a></b></li>-->
+    <li><a routerLink="/first-component" routerLinkActive="active" ariaCurrentWhenActive="page">PATIENT EXPERIENCE</a></li>
           <li><b><a routerLink="/home-component"  routerLinkActive="active" ariaCurrentWhenActive="page">ABOUT</a></b></li>
           <!--                <li><b><a routerLink="/ueberuns-component"  routerLinkActive="active" ariaCurrentWhenActive="page">Über uns</a></b></li>-->
           <li><b><a routerLink="/ueberuns-component"  routerLinkActive="active" ariaCurrentWhenActive="page">PROCEDURE</a></b></li>
-          <!--                <li><a routerLink="/first-component" routerLinkActive="active" ariaCurrentWhenActive="page">First Component</a></li>-->
-          <li><b><a href="#leinstungen">PATIENT EXPERIENCE</a></b></li>
+
+<!--          <li><b><a routerLink="/first-component"  routerLinkActive="active" ariaCurrentWhenActive="page">PATIENT EXPERIENCE</a></b></li>-->
           <li><b><a href="#faq">CONDITIONS</a></b></li>
           <li><b><a href="#contact">TREATMENTS</a></b></li>
-        </ul>
-      </div>
+<!--        </ul>-->
+
+  <div class="rightcenter">
+    <form cForm class="d-flex" role="search">
+      <input aria-label="Search" cFormControl class="me-2" placeholder="Search" type="search">
+<!--      <button cButton color="success" variant="outline">Search</button>-->
+    </form>
+
+    <button cButton color="success" variant="outline">BOOK NOW</button>
+<!--  <div class="navbarright">-->
+<!--    <button class="button button4">Gray</button>-->
+<!--  </div>-->
+  </div>
+  </div>
 </div>
+
+<!--<div class="sidenavposition">-->
+
+
+
+
+
+<!--</div>-->
+
+
+
+
+  <!--</div>-->
+
+
+<!--<div class="leftsidenav">-->
+<!--  <mat-drawer-container class="example-container" autosize>-->
+<!--    <mat-drawer #drawer class="example-sidenav" mode="side">-->
+<!--      <p>Auto-resizing sidenav</p>-->
+<!--      <p *ngIf="showFiller">Lorem, ipsum dolor sit amet consectetur.</p>-->
+<!--      <button (click)="showFiller = !showFiller" mat-raised-button>-->
+<!--        Toggle extra text-->
+<!--      </button>-->
+<!--    </mat-drawer>-->
+
+<!--    <div class="example-sidenav-content">-->
+<!--      <button type="button" mat-button (click)="drawer.toggle()">-->
+<!--        +-->
+<!--      </button>-->
+<!--    </div>-->
+
+<!--  </mat-drawer-container>-->
+<!--</div>-->
