--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -340,3 +340,30 @@ position: relative;
   text-align: left;
   width: 600px;
 }
+
+.expansionright{
+position: relative;
+  left: 400px;
+  text-align: left;
+  width: 200px;
+}
+
+.example-container {
+  width: 350px;
+  height: 500px;
+   position: fixed;
+  top: 100px;
+  left: 0px;
+}
+
+.example-sidenav-content {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.example-sidenav {
+  padding: 20px;
+}
+
