--- a/src/app/first/first.component.html
+++ b/src/app/first/first.component.html
@@ -89,8 +89,14 @@
   </div>
     <div class="centerbody">
       <h2>BIGGER ISN’T ALWAYS BETTER.</h2>
-      <img src="assets/icons/lipandface.png"  >
+      <br>
+
+      <img src="assets/images/woman.png" width="600" height="400">
+      <br>
+      <br>
+      <br>
       <h2> Rupesh doesn’t believe you need excessive product to add incredible volume to your lips. Placement is key.</h2>
+      <br>
       <p>
         All patients are unique, and as a medical prescriber in London with excellent anatomical understanding, he will listen to your objectives and can assess not just your lips, but your facial proportions as a whole, to advise on the most appropriate amount of lip filler and where to apply this for maximum effect whilst maintaining natural looking lips.
       </p>
@@ -100,6 +106,7 @@
 <br>
 <br>
 <br>
+      <div class="naturalborder">
       <h2> NATURAL LOOKING LIPS IN LONDON, WITH A LITTLE HELP..</h2>
 
       <h2> Rupesh doesn’t believe you need excessive product to add incredible volume to your lips. Placement is key.</h2>
@@ -107,6 +114,7 @@
         Rupesh based in world famous Harley Street London, believes that the most exceptional lips appear to have had nothing injected at all. They are simply balanced, full and natural looking lips. Through employing the non-surgical lip filler techniques that Rupesh has perfected, he knows you will be leaving the London Lip Clinic with nothing but a smile – and some compliments.
       </p>
       <h3> WHO DESIRES A FULLER, POUTIER LIP SHAPE.</h3>
+      </div>
     </div>
   <div class="body3">
 
@@ -138,14 +146,16 @@
 
     <div class="alignleft2">
 
-      <img src="assets/images/babas.png" width="600" height="600">
+      <img src="assets/images/female.png" width="600" height="400">
     </div>
 
     <div class="alignright3">
       <div class="bodytext2">
         <h4>BABAS DIENSTLEISTUNGEN</h4>
-        <h2>Entrümpelung Berlin und Brandenburg – Der Vorgang</h2>
-        <p>Bevor wir mit der Entrümpelung beginnen, benötigen wir noch einige Informationen von Ihnen, um uns ein genaues Bild von der Lage Ihrer Wohnung oder Ihres Hauses zu machen. Gerne können Sie uns per Mail oder per Anruf kontaktieren. Als nächstes vereinbaren wir dann einen Termin vor Ort mit Ihnen und machen Ihnen ein Kostenvorschlag, der auch die fachgerechte Entsorgung der Gegenstände, Möbel und Substanzen beinhaltet. Der Besichtigungstermin ist selbstverständlich kostenlos und auch das Angebot ist nicht verbindlich. Kurz nach der Bestätigung des Angebots wird sich einer unserer Mitarbeiter, der für die Entrümpelung in Berlin zuständig ist bei Ihnen melden, um einen Termin für die Entrümpelung mit Ihnen zu vereinbaren.</p>
+        <h2>EXPERTISE COUNTS FOR EVERYTHING.</h2>
+        <p>
+          A prescriber, Member of the Royal Pharmaceutical Society and advanced aesthetics practitioner, Rupesh has spent the last 10 years focusing primarily on the care and wellbeing of his aesthetics patients, with lip fillers London being at the core of his attention. In this time he has crafted an enviable reputation as the greatest Lip Injector in London, and his strong celebrity following along with an International appeal for VIP patients is a testament to his expertise.
+        </p>
       </div>
     </div>
   </div>
