--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
   <h3>DISSOLVING LIP FILLER | WHAT IS LIP FLIP</h3>
   <p>Consultation available with Rupesh at our Harley Street Clinic in Central London.</p>
   <h3>LIP FILLERS – LONDON HARLEY STREET</h3>
-  <img src="assets/icons/lipandface.png"  >
+  <img src="assets/images/boyali.png"  >
   <p class="centertext">Our Harley Street clinic is located in central London. Rupesh heads this clinic and is a highly specialised and experienced medical aesthetic practitioner who performs advanced lip augmentation injections using an advanced cannula technique on a regular basis.</p>
   <p class="centertext">He has an interest in facial aesthetics, providing anti-wrinkle treatments and dermal fillers in his London private clinic.</p>
   <p class="centertext">Rupesh Shah. Reg Number: 2048914</p>
