--- a/src/app/ueberuns/ueberuns.component.html
+++ b/src/app/ueberuns/ueberuns.component.html
@@ -2,7 +2,7 @@
 <div class="body2">
   <div class="bodytext">
     <div class="alignleft">
-      <img src="assets/images/lovelysunsetinberlin.jpg" width="500" height="600">
+      <img src="assets/images/ruj.png" width="400" height="600">
     </div>
     <div class="alignright">
       <h4>BABAS DIENSTLEISTUNGEN</h4>
