--- a/src/app/first/first.component.html
+++ b/src/app/first/first.component.html
@@ -1,23 +1,24 @@
 <br>
 <br>
 <!--<div class="firstLondon">-->
+<div class="backgroundcolor">
+<!--  <div style="background-size: 2000px 1300px;" [ngStyle]="{backgroundImage:'url(./assets/images/pure.jpeg)'}" >-->
+  <div style="background-size: 1200px 600px;" [ngStyle]="{backgroundImage:'url(./assets/images/pure.jpeg)'}" >
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
-  <div style="background-size: 2000px 1300px;" [ngStyle]="{backgroundImage:'url(./assets/images/woman-kosmetik.png)'}" >
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <h1>BEST LIP FILLERS</h1>
-    <h1>IN LONDON</h1>
-    <h3>MEDICAL AESTHETICS IN LONDON BY RUPESH SHAH</h3>
+
+<!--    <h6>BEST LIP FILLERS</h6>-->
+<!--    <h6>IN LONDON</h6>-->
+<!--    <h3>MEDICAL AESTHETICS IN LONDON BY RUPESH SHAH</h3>-->
 <!--          <img src="assets/images/babas.png" width="100" height="100" >-->
     <!--      <h1 style="text-align:center">This is heading 1</h1>-->
 <!--    <h5 style="color:white;">ENTRÜMPELUNGEN IN BERLIN UND BRANDENBURG</h5>-->
@@ -188,5 +189,6 @@
 
 
   </div>
+</div>
 </div>
 </div>
