--- a/src/app/headersection/headersection.component.html
+++ b/src/app/headersection/headersection.component.html
@@ -1,8 +1,9 @@
 <div class="topbar">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <a href="https://api.whatsapp.com/send?phone=51955081075&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202." class="float" target="_blank">
-    <i class="fa fa-whatsapp my-float"></i>
-  </a>
+<!--  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">-->
+<!--  <a href="https://api.whatsapp.com/send?phone=51955081075&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202." class="float" target="_blank">-->
+<!--    <i class="fa fa-whatsapp my-float"></i>-->
+<!--  </a>-->
+  <a href="whatsapp://send?abid=phonenumber&text=Hello%2C%20World!"> <img src="assets/icons/whatsapp.png"></a>
 
   <a href="mailto:myemailaddress@gmail.com"> <img src="assets/icons/email.png"> </a>
 
@@ -10,28 +11,30 @@
   <div class="navcenter">
 <!--        <ul>-->
           <!--                <li (click)="toHome()"><b><a href="#home">Start</a></b></li>-->
-    <li><a routerLink="/first-component" routerLinkActive="active" ariaCurrentWhenActive="page">PATIENT EXPERIENCE</a></li>
-          <li><b><a routerLink="/home-component"  routerLinkActive="active" ariaCurrentWhenActive="page">ABOUT</a></b></li>
+    <li><a routerLink="/first-component" routerLinkActive="active" ariaCurrentWhenActive="page">STARTSEITE</a></li>
+          <li><b><a routerLink="/home-component"  routerLinkActive="active" ariaCurrentWhenActive="page">ÜBER UNS</a></b></li>
           <!--                <li><b><a routerLink="/ueberuns-component"  routerLinkActive="active" ariaCurrentWhenActive="page">Über uns</a></b></li>-->
-          <li><b><a routerLink="/ueberuns-component"  routerLinkActive="active" ariaCurrentWhenActive="page">PROCEDURE</a></b></li>
+          <li><b><a routerLink="/ueberuns-component"  routerLinkActive="active" ariaCurrentWhenActive="page">REFERENZEN</a></b></li>
+    <li><b><a href="#faq">LEISTUNGEN</a></b></li>
+    <li><b><a routerLink="/secondsection-component"  routerLinkActive="active" ariaCurrentWhenActive="page">KONTAKFORMULAR</a></b></li>
 
 <!--          <li><b><a routerLink="/first-component"  routerLinkActive="active" ariaCurrentWhenActive="page">PATIENT EXPERIENCE</a></b></li>-->
-          <li><b><a href="#faq">CONDITIONS</a></b></li>
-          <li><b><a href="#contact">TREATMENTS</a></b></li>
+
+<!--          <li><b><a href="#contact">KONTAKFORMULAR</a></b></li>-->
 <!--        </ul>-->
 
-  <div class="rightcenter">
-    <form cForm class="d-flex" role="search">
-      <input aria-label="Search" cFormControl class="me-2" placeholder="Search" type="search">
-<!--      <button cButton color="success" variant="outline">Search</button>-->
-    </form>
+<!--  <div class="rightcenter">-->
+<!--    <form cForm class="d-flex" role="search">-->
+<!--      <input aria-label="Search" cFormControl class="me-2" placeholder="Search" type="search">-->
+<!--&lt;!&ndash;      <button cButton color="success" variant="outline">Search</button>&ndash;&gt;-->
+<!--    </form>-->
 
-    <button cButton color="success" variant="outline">BOOK NOW</button>
-<!--  <div class="navbarright">-->
-<!--    <button class="button button4">Gray</button>-->
+<!--    <button cButton color="success" variant="outline">BOOK NOW</button>-->
+<!--&lt;!&ndash;  <div class="navbarright">&ndash;&gt;-->
+<!--&lt;!&ndash;    <button class="button button4">Gray</button>&ndash;&gt;-->
+<!--&lt;!&ndash;  </div>&ndash;&gt;-->
 <!--  </div>-->
-  </div>
-  </div>
+<!--  </div>-->
 </div>
 
 <!--<div class="sidenavposition">-->
