--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,22 +1,35 @@
+<div class="allcolour">
 <br>
 <br>
 <br>
 <div class="centerbody">
   <h2>LIP FILLERS LONDON.</h2>
+  <br>
   <img src="assets/icons/lipandface.png"  >
+  <br>
+  <br>
   <h2> LIP FILLER IN LONDON</h2>
+  <br>
   <h3>LIP FILLER IS AN INCREDIBLY POPULAR CHOICE FOR ANYONE </h3>
+  <br>
    <h3> WHO DESIRES A FULLER, POUTIER LIP SHAPE.</h3>
 
+  <br>
   <p class="centertext">Rupesh says, “People tend to love having more shapely, voluminous, and well-defined lips. We must make sure we don’t go overboard with the lip filler process. So you might want to think about getting your first lip augmentation injections in two treatment rounds, not just one. A secondary follow-up LIP FILLER TOP-UP injection appointment would typically occur at the 2 to 3-week mark after the first round. This ensures that the lip filler injected initially has settled and this is no swelling or inflammation present. Your lips are fully healed and are ready for round 2. As an experienced practitioner, I carefully use just the right amount of filler to enhance lips and give a natural and subtle finish. ”</p>
+  <br>
   <h3>DISSOLVING LIP FILLER | WHAT IS LIP FLIP</h3>
+  <br>
   <p>Consultation available with Rupesh at our Harley Street Clinic in Central London.</p>
+  <br>
   <h3>LIP FILLERS – LONDON HARLEY STREET</h3>
+  <br>
   <img src="assets/images/boyali.png"  >
+  <br>
   <p class="centertext">Our Harley Street clinic is located in central London. Rupesh heads this clinic and is a highly specialised and experienced medical aesthetic practitioner who performs advanced lip augmentation injections using an advanced cannula technique on a regular basis.</p>
   <p class="centertext">He has an interest in facial aesthetics, providing anti-wrinkle treatments and dermal fillers in his London private clinic.</p>
   <p class="centertext">Rupesh Shah. Reg Number: 2048914</p>
   <p class="centertext">Best Lip Fillers London 2021, London Lip Clinic London is in a central location close to Hyde Park, Belgravia, Kensington, South Kensington, Bayswater, Fulham, Holland Park, Green Park, Notting Hill. Chelsea, Soho, Knightsbridge,  Battersea, West End, Clapham,  Marylebone, Regents Park, St Johns Wood, Victoria,  Primrose Hill, Earls Court, Mayfair, and Fitzrovia.</p>
+  <br>
   <iframe width="600" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY">
   </iframe>
   <br><br>
@@ -53,6 +66,7 @@
   </p>
   <br>
   <h3 class="centertext">FREQUENTLY ASKED QUESTIONS</h3>
+  <br>
   <div class="centerright">
   <mat-accordion>
     <mat-expansion-panel hideToggle>
@@ -98,24 +112,24 @@
   </div>
 </div>
 
-<mat-drawer-container class="example-container" autosize>
-  <mat-drawer #drawer class="example-sidenav" mode="side">
-    <p>ABOUT LIP FILLERS LONDON TREATMENT</p>
-    <p>WHAT IS LIP FILLER?</p>
-    <p>LIP FILLER RISKS AND SIDE EFFECTS</p>
-    <p *ngIf="showFiller">Lorem, ipsum dolor sit amet consectetur.</p>
-    <button (click)="showFiller = !showFiller" mat-raised-button>
-      Toggle extra text
-    </button>
-  </mat-drawer>
+<!--<mat-drawer-container class="example-container" autosize>-->
+<!--  <mat-drawer #drawer class="example-sidenav" mode="side">-->
+<!--    <p>ABOUT LIP FILLERS LONDON TREATMENT</p>-->
+<!--    <p>WHAT IS LIP FILLER?</p>-->
+<!--    <p>LIP FILLER RISKS AND SIDE EFFECTS</p>-->
+<!--    <p *ngIf="showFiller">Lorem, ipsum dolor sit amet consectetur.</p>-->
+<!--    <button (click)="showFiller = !showFiller" mat-raised-button>-->
+<!--      Extra Information-->
+<!--    </button>-->
+<!--  </mat-drawer>-->
 
-  <div class="example-sidenav-content">
-    <button type="button" mat-button (click)="drawer.toggle()">
-      PAGE CONTENT
-    </button>
-  </div>
+<!--  <div class="example-sidenav-content">-->
+<!--    <button type="button" mat-button (click)="drawer.toggle()">-->
+<!--      + PAGE CONTENT-->
+<!--    </button>-->
+<!--  </div>-->
 
-</mat-drawer-container>
+<!--</mat-drawer-container>-->
 
 <!--//-->
 <!--<div class="body1">-->
@@ -288,3 +302,4 @@
 
 <!--  </div>-->
 <!--</div>-->
+</div>
