--- a/src/app/headersection/headersection.component.css
+++ b/src/app/headersection/headersection.component.css
@@ -1,12 +1,14 @@
 .topbar{
-   background-color: black;
+   background-color: white;
    display: flex;  /* Make Flex container */
 position: fixed;
+   color:black;
 }
 .navcenter{
    left: 400px;
    position: fixed;
-   background-color:black;
+   background-color:white;
+   color:black;
 }
 .topbar ul{
    list-style-type: none;
@@ -24,18 +26,18 @@ position: fixed;
    padding: 15px 20px;
    text-decoration: none;
    display: inline-block;
-   color: white;
+   color: black;
 }
 .topbar a:hover{
-   background-color: rgba(0,0,0,0.7);
+   background-color: #E6BB8E;
    color: white;
 }
 .active{
-   background-color: #1ebba3;
+   background-color: #E6BB8E;
 }
 
 .whitecolor{
-  color:white;
+  color:black;
 }
 
 
